[package]
name = "who"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
pretty_assertions = "1.4.0"
rand = "0.8.5"
serde = "1.0.189"
tokio = { version = "1.33.0", features=["full"] }
