[package]
name = "who"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
nom = "7.1.3"
rand = "0.8.5"
tokio = { version = "1.33.0", features=["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
